// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`whitespace '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "whitespace",
  ],
  "pos": 0,
}
`;

exports[`whitespace ' ' conditional success tests AST matches snapshot 1`] = `undefined`;

exports[`whitespace '/n' conditional success tests AST matches snapshot 1`] = `undefined`;

exports[`whitespace '/r' conditional success tests AST matches snapshot 1`] = `undefined`;

exports[`whitespace '/r/n' conditional success tests AST matches snapshot 1`] = `undefined`;

exports[`whitespace '/r/n  /n' conditional success tests AST matches snapshot 1`] = `undefined`;

exports[`whitespace 'b' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "whitespace",
  ],
  "pos": 0,
}
`;

exports[`optional whitespace '' conditional success tests AST matches snapshot 1`] = `undefined`;

exports[`optional whitespace ' ' conditional success tests AST matches snapshot 1`] = `undefined`;

exports[`optional whitespace '/n' conditional success tests AST matches snapshot 1`] = `undefined`;

exports[`optional whitespace '/r' conditional success tests AST matches snapshot 1`] = `undefined`;

exports[`optional whitespace '/r/n' conditional success tests AST matches snapshot 1`] = `undefined`;

exports[`optional whitespace '/r/n  /n' conditional success tests AST matches snapshot 1`] = `undefined`;

exports[`optional whitespace 'b' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": 0,
}
`;

exports[`newline '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "newline",
  ],
  "pos": 0,
}
`;

exports[`newline ' ' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "newline",
  ],
  "pos": 0,
}
`;

exports[`newline '/n' conditional success tests AST matches snapshot 1`] = `undefined`;

exports[`newline '/r' conditional success tests AST matches snapshot 1`] = `undefined`;

exports[`newline '/r/n' conditional success tests AST matches snapshot 1`] = `undefined`;

exports[`newline '/r/n  /n' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": 2,
}
`;

exports[`newline 'b' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "newline",
  ],
  "pos": 0,
}
`;
